# git-author

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  config.ini.template  git_author.py  git_set_author.py  install.ps1  install.sh  main.py  pyproject.toml  setup.py
src/: git_author.py
